# vad_demo

./: README.md  pubspec.yaml  test.pcm
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/vad_demo/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
lib/: main.dart  vad_view.dart
models/: vad.param
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  silero_vad.cpp
